Switch to Azure SQL database

--- a/Web.config
+++ b/Web.config
@@ -29,6 +29,7 @@
   <Examine configSource="config\ExamineSettings.config" />
   <ExamineLuceneIndexSets configSource="config\ExamineIndex.config" />
   <log4net configSource="config\log4net.config" />
+  <connectionStrings configSource="config\ConnectionStrings.config" />
 
   <appSettings>
     <!-- 
@@ -53,11 +54,6 @@
     <add key="log4net.Config" value="config\log4net.config" />
 
   </appSettings>
-  <connectionStrings>
-    <remove name="umbracoDbDSN" />
-    <add name="local" connectionString="" providerName="" />
-    <!-- Important: If you're upgrading Umbraco, do not clear the connection string / provider name during your web.config merge. -->
-  <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\Umbraco.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" /></connectionStrings>
   
   <system.data>
     <DbProviderFactories>
