--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ Cached/
 # Ignore Umbraco content cache file
 **/App_Data/umbraco.config
 
+# Ignore sensitive database connection strings
+**/Config/ConnectionStrings.config
+
 # Don't ignore Umbraco packages (VisualStudio.gitignore mistakes this for a NuGet packages folder)
 # Make sure to include details from VisualStudio.gitignore BEFORE this
 !**/App_Data/[Pp]ackages/
